--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                                 </select>
                                 </div>
                                 <div class="offer-bottom__item col-lg-3">
-                                    <input type="submit" value="Оставить заявку">
+                                    <button type="submit">Оставить заявку</button> 
                                 </div>
                             </div>
                         </div>
@@ -298,39 +298,68 @@
                             <div class="col-md-12 col-lg-4">
                                 <a href="#">
                                     <div class="services-item__service service-1">
-                                        <div class="services-big__one">
-                                            <p>Контейнерные перевозки</p>
+                                        <!-- <div class="services-big__one"> -->
+                                            <img src="img/services/Rectangle1805.png" alt="Ala-Kaz">
+                                            <p class="service-text">Контейнерные перевозки</p>
                                             <div class="services-more" title="Далее">
                                                 <svg xmlns="http://www.w3.org/2000/svg" width="29" height="29" viewBox="0 0 29 29" fill="none">
                                                 <path d="M28.0741 14.2577C28.0741 21.7537 21.924 27.841 14.3242 27.841C6.72434 27.841 0.574217 21.7537 0.574217 14.2577C0.574217 6.76174 6.72434 0.674375 14.3242 0.674375C21.924 0.674375 28.0741 6.76174 28.0741 14.2577Z" stroke="white" stroke-width="1.07043"/>
                                                 <path d="M20.4083 14.6363C20.6173 14.4273 20.6173 14.0884 20.4083 13.8794L17.0022 10.4733C16.7932 10.2643 16.4543 10.2643 16.2453 10.4733C16.0363 10.6823 16.0363 11.0212 16.2453 11.2302L19.273 14.2578L16.2453 17.2854C16.0363 17.4945 16.0363 17.8333 16.2453 18.0424C16.4543 18.2514 16.7932 18.2514 17.0022 18.0424L20.4083 14.6363ZM8.61859 14.793H20.0299V13.7226H8.61859V14.793Z" fill="white"/>
                                                 </svg>
                                             </div>
-                                        </div>
+                                        <!-- </div> -->
                                     </div>
                                 </a>
                             </div>
                             <div class="col-md-6 col-lg-4">
                                 <a href="#">
                                     <div class="services-item__service service-2">
-                                        <p>Автомобильные перевозки</p>
+                                        <img src="img/services/Rectangle1804.png" alt="Ala-Kaz">
+                                        <p class="service-text">Автомобильные перевозки</p>
+                                        <div class="services-more" title="Далее">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="29" height="29" viewBox="0 0 29 29" fill="none">
+                                            <path d="M28.0741 14.2577C28.0741 21.7537 21.924 27.841 14.3242 27.841C6.72434 27.841 0.574217 21.7537 0.574217 14.2577C0.574217 6.76174 6.72434 0.674375 14.3242 0.674375C21.924 0.674375 28.0741 6.76174 28.0741 14.2577Z" stroke="white" stroke-width="1.07043"/>
+                                            <path d="M20.4083 14.6363C20.6173 14.4273 20.6173 14.0884 20.4083 13.8794L17.0022 10.4733C16.7932 10.2643 16.4543 10.2643 16.2453 10.4733C16.0363 10.6823 16.0363 11.0212 16.2453 11.2302L19.273 14.2578L16.2453 17.2854C16.0363 17.4945 16.0363 17.8333 16.2453 18.0424C16.4543 18.2514 16.7932 18.2514 17.0022 18.0424L20.4083 14.6363ZM8.61859 14.793H20.0299V13.7226H8.61859V14.793Z" fill="white"/>
+                                            </svg>
+                                        </div>
                                     </div>
                                 </a>
                                 <a href="#">
                                     <div class="services-item__service service-3">
-                                        <p>Негабаритные перевозки</p>
+                                        <img src="img/services/Rectangle1806.png" alt="Ala-Kaz">
+                                        <p class="service-text">Негабаритные перевозки</p>
+                                        <div class="services-more" title="Далее">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="29" height="29" viewBox="0 0 29 29" fill="none">
+                                            <path d="M28.0741 14.2577C28.0741 21.7537 21.924 27.841 14.3242 27.841C6.72434 27.841 0.574217 21.7537 0.574217 14.2577C0.574217 6.76174 6.72434 0.674375 14.3242 0.674375C21.924 0.674375 28.0741 6.76174 28.0741 14.2577Z" stroke="white" stroke-width="1.07043"/>
+                                            <path d="M20.4083 14.6363C20.6173 14.4273 20.6173 14.0884 20.4083 13.8794L17.0022 10.4733C16.7932 10.2643 16.4543 10.2643 16.2453 10.4733C16.0363 10.6823 16.0363 11.0212 16.2453 11.2302L19.273 14.2578L16.2453 17.2854C16.0363 17.4945 16.0363 17.8333 16.2453 18.0424C16.4543 18.2514 16.7932 18.2514 17.0022 18.0424L20.4083 14.6363ZM8.61859 14.793H20.0299V13.7226H8.61859V14.793Z" fill="white"/>
+                                            </svg>
+                                        </div>
                                     </div>
                                 </a>
                             </div>
                             <div class="col-md-6 col-lg-4">
                                 <a href="#">
                                     <div class="services-item__service service-4">
-                                        <p>Ж/Д перевозки</p>
+                                        <img src="img/services/Rectangle1807.png" alt="Ala-Kaz">
+                                        <p class="service-text">Железнодорожные перевозки</p>
+                                        <div class="services-more" title="Далее">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="29" height="29" viewBox="0 0 29 29" fill="none">
+                                            <path d="M28.0741 14.2577C28.0741 21.7537 21.924 27.841 14.3242 27.841C6.72434 27.841 0.574217 21.7537 0.574217 14.2577C0.574217 6.76174 6.72434 0.674375 14.3242 0.674375C21.924 0.674375 28.0741 6.76174 28.0741 14.2577Z" stroke="white" stroke-width="1.07043"/>
+                                            <path d="M20.4083 14.6363C20.6173 14.4273 20.6173 14.0884 20.4083 13.8794L17.0022 10.4733C16.7932 10.2643 16.4543 10.2643 16.2453 10.4733C16.0363 10.6823 16.0363 11.0212 16.2453 11.2302L19.273 14.2578L16.2453 17.2854C16.0363 17.4945 16.0363 17.8333 16.2453 18.0424C16.4543 18.2514 16.7932 18.2514 17.0022 18.0424L20.4083 14.6363ZM8.61859 14.793H20.0299V13.7226H8.61859V14.793Z" fill="white"/>
+                                            </svg>
+                                        </div>
                                     </div>
                                 </a>
                                 <a href="#">
                                     <div class="services-item__service service-5">
-                                        <p>Мультимодальные перевозки</p>
+                                        <img src="img/services/Rectangle1808.png" alt="Ala-Kaz">
+                                        <p class="service-text">Мультимодальные перевозки</p>
+                                        <div class="services-more" title="Далее">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="29" height="29" viewBox="0 0 29 29" fill="none">
+                                            <path d="M28.0741 14.2577C28.0741 21.7537 21.924 27.841 14.3242 27.841C6.72434 27.841 0.574217 21.7537 0.574217 14.2577C0.574217 6.76174 6.72434 0.674375 14.3242 0.674375C21.924 0.674375 28.0741 6.76174 28.0741 14.2577Z" stroke="white" stroke-width="1.07043"/>
+                                            <path d="M20.4083 14.6363C20.6173 14.4273 20.6173 14.0884 20.4083 13.8794L17.0022 10.4733C16.7932 10.2643 16.4543 10.2643 16.2453 10.4733C16.0363 10.6823 16.0363 11.0212 16.2453 11.2302L19.273 14.2578L16.2453 17.2854C16.0363 17.4945 16.0363 17.8333 16.2453 18.0424C16.4543 18.2514 16.7932 18.2514 17.0022 18.0424L20.4083 14.6363ZM8.61859 14.793H20.0299V13.7226H8.61859V14.793Z" fill="white"/>
+                                            </svg>
+                                        </div>
                                     </div>
                                 </a>
                             </div>
@@ -352,7 +381,7 @@
                                     </div>
                                     <input type="text" placeholder="Сообщение">
                                     <div class="input-flex">
-                                        <input type="submit" value="Оставить заявку">
+                                        <button type="submit">Оставить заявку</button>
                                         <p>или звоните по номеру: <br><a href="tel:+77088888090">+7 (708) 88-88-090 / 91</a></p>
                                     </div>
                                 </form>
@@ -412,13 +441,19 @@
                                     <div class="swiper-slide">
                                         <div class="testimonials-item__slider d-flex">
                                             <img src="img/diploma.png" alt="Ala-Kaz">
-                                            <img src="img/diploma-back.png" alt="Ala-Kaz">
+                                            <!-- <img src="img/diploma-back.png" alt="Ala-Kaz"> -->
                                         </div>
                                     </div>
                                     <div class="swiper-slide">
                                         <div class="testimonials-item__slider d-flex">
                                             <img src="img/diploma.png" alt="Ala-Kaz">
-                                            <img src="img/diploma-back.png" alt="Ala-Kaz">
+                                            <!-- <img src="img/diploma-back.png" alt="Ala-Kaz"> -->
+                                        </div>
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <div class="testimonials-item__slider d-flex">
+                                            <img src="img/diploma.png" alt="Ala-Kaz">
+                                            <!-- <img src="img/diploma-back.png" alt="Ala-Kaz"> -->
                                         </div>
                                     </div>
                                 </div>
